[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bt_api_dydx"
version = "0.15.0"
description = "dYdX exchange plugin for bt_api"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bt_api_base>=0.15,<1.0",
]

[project.entry-points."bt_api.plugins"]
dydx = "bt_api_dydx.plugin:register_plugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["I", "UP", "E", "F", "W"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["bt_api_dydx"]
